NoRef added style to prevent word break on table buttons because always looks insane no matter what. note: not possible for links.
git-svn-id: svn://data.ilscipio.com/ilscipio/ofbiz_foundation/trunk@7463 55bbc10b-e964-4c8f-a844-a62c6f7d3c80

--- a/framework/images/webapp/images/styles/base/scss/_base.scss
+++ b/framework/images/webapp/images/styles/base/scss/_base.scss
@@ -132,7 +132,8 @@ table.basic-table {
 }
 
 td {word-break:break-all;}
-
+// don't break button labels; always ugly
+td button, td .button, td input[type="button"], td input[type="submit"], td .buttontext {word-break:normal;}
 
 // collapsible fieldset
 .toggleField fieldset{
