--- a/framework/images/webapp/images/styles/base/stylesheets/app.css
+++ b/framework/images/webapp/images/styles/base/stylesheets/app.css
@@ -9678,7 +9678,12 @@ td {
   word-break: break-all;
 }
 
-/* line 138, ../scss/_base.scss */
+/* line 136, ../scss/_base.scss */
+td button, td .button, td input[type="button"], td input[type="submit"], td .buttontext {
+  word-break: normal;
+}
+
+/* line 139, ../scss/_base.scss */
 .toggleField fieldset {
   border: none;
   color: #008cba;
@@ -9686,29 +9691,29 @@ td {
   padding: 8px 0px;
 }
 
-/* line 144, ../scss/_base.scss */
+/* line 145, ../scss/_base.scss */
 fieldset {
   border: none;
 }
-/* line 147, ../scss/_base.scss */
+/* line 148, ../scss/_base.scss */
 fieldset legend {
   padding: 0px;
   margin: 0px;
   text-align: right;
   background: none;
 }
-/* line 154, ../scss/_base.scss */
+/* line 155, ../scss/_base.scss */
 fieldset legend:hover {
   color: #0078a0;
   cursor: pointer;
 }
 
-/* line 161, ../scss/_base.scss */
+/* line 162, ../scss/_base.scss */
 .collapsed {
   display: inline-block;
 }
 
-/* line 165, ../scss/_base.scss */
+/* line 166, ../scss/_base.scss */
 .rotate-90 {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -9716,7 +9721,7 @@ fieldset legend:hover {
   writing-mode: tb-rl;
 }
 
-/* line 172, ../scss/_base.scss */
+/* line 173, ../scss/_base.scss */
 .rotate-180 {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -9724,7 +9729,7 @@ fieldset legend:hover {
   writing-mode: tb-rl;
 }
 
-/* line 179, ../scss/_base.scss */
+/* line 180, ../scss/_base.scss */
 .rotate-270 {
   -webkit-transform: rotate(270deg);
   -moz-transform: rotate(270deg);
@@ -9732,7 +9737,7 @@ fieldset legend:hover {
   writing-mode: tb-rl;
 }
 
-/* line 186, ../scss/_base.scss */
+/* line 187, ../scss/_base.scss */
 pre {
   /* original is white background with no border */
   background-color: #fff;
@@ -9756,36 +9761,36 @@ pre {
   border-width: 1px;
 }
 
-/* line 208, ../scss/_base.scss */
+/* line 209, ../scss/_base.scss */
 code {
   margin: 0px;
   padding: 0px;
   border: none;
   background: none;
 }
-/* line 213, ../scss/_base.scss */
+/* line 214, ../scss/_base.scss */
 code .INFO {
   color: #333333;
 }
-/* line 215, ../scss/_base.scss */
+/* line 216, ../scss/_base.scss */
 code .WARN {
   color: #f08a24;
 }
-/* line 216, ../scss/_base.scss */
+/* line 217, ../scss/_base.scss */
 code .ERROR {
   color: #f04124;
 }
-/* line 217, ../scss/_base.scss */
+/* line 218, ../scss/_base.scss */
 code .FATAL {
   color: #f04124;
   font-weight: bold;
 }
-/* line 218, ../scss/_base.scss */
+/* line 219, ../scss/_base.scss */
 code .TRACE {
   color: #999999;
 }
 
-/* line 222, ../scss/_base.scss */
+/* line 223, ../scss/_base.scss */
 .postfix input[type="submit"], .postfix button {
   background: #f2f2f2;
   border-color: #cccccc;
@@ -9798,42 +9803,42 @@ code .TRACE {
   font-size: 1.2rem;
 }
 
-/* line 234, ../scss/_base.scss */
+/* line 235, ../scss/_base.scss */
 .postfix i {
   font-size: 1.2rem;
 }
 
-/* line 236, ../scss/_base.scss */
+/* line 237, ../scss/_base.scss */
 .postfix .fi {
   font-family: 'foundation-icons', 'FontAwesome', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 1.2rem;
   line-height: 0.9rem;
 }
 
-/* line 243, ../scss/_base.scss */
+/* line 244, ../scss/_base.scss */
 ul.chart-legend {
   list-style: none;
 }
 
 /*  FOOTER */
-/* line 250, ../scss/_base.scss */
+/* line 251, ../scss/_base.scss */
 #body-content {
   min-height: 100%;
   margin-bottom: -26px;
 }
 
-/* line 255, ../scss/_base.scss */
+/* line 256, ../scss/_base.scss */
 #body-content:after {
   content: "";
   display: block;
 }
 
-/* line 260, ../scss/_base.scss */
+/* line 261, ../scss/_base.scss */
 #body-content:after, #footer {
   height: 26px;
 }
 
-/* line 264, ../scss/_base.scss */
+/* line 265, ../scss/_base.scss */
 #footer {
   background: #333333;
   color: #eeeeee;
@@ -9841,24 +9846,24 @@ ul.chart-legend {
 }
 
 /*MISC*/
-/* line 274, ../scss/_base.scss */
+/* line 275, ../scss/_base.scss */
 .progress .meter {
   transition-duration: 3s;
 }
 
 @media only screen and (min-width: 40.0625em) and (max-width: 64em) {
-  /* line 283, ../scss/_base.scss */
+  /* line 284, ../scss/_base.scss */
   input, select, text-area {
     max-width: 100%;
   }
 }
 @media only screen and (max-width: 40em) {
-  /* line 288, ../scss/_base.scss */
+  /* line 289, ../scss/_base.scss */
   input, select, text-area {
     max-width: 100%;
   }
 
-  /* line 290, ../scss/_base.scss */
+  /* line 291, ../scss/_base.scss */
   .login-box {
     min-width: 0;
   }
